# version_control_info

./: Cargo.toml  Readme.md
src/version_control_info_build/: Cargo.toml
test_app/: Cargo.toml  build.rs
test_app/src/: main.rs
version_control_info/: Cargo.toml
version_control_info/src/: lib.rs
version_control_info_build/: Cargo.toml  Readme.md
version_control_info_build/src/: cargo_vcs_info.rs  git.rs  lib.rs  util.rs
