[package]
name = "version_control_info"
version = "0.4.0"
edition = "2024"
description = "Embed vcs info in cargo crates"
license = "MIT OR Apache-2.0"
readme = "../Readme.md"
repository = "https://github.com/burtonageo/version_control_info"
keywords = ["version", "control", "revision", "commit", "vcs"]

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true
default-features = false

[dev-dependencies.version_control_info_build]
path = "../version_control_info_build"
version = "0.5"

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]
