[package]
name = "version_control_info_build"
version = "0.3.0"
edition = "2024"
description = "Build script support for the version_control_info crate"
license = "MIT OR Apache-2.0"
readme = "./Readme.md"

[dependencies]
cfg-if = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
